# recipes_rag

./: .gitignore  docker-compose.yml
backend/: .env.sample  Dockerfile  main.py  pyproject.toml  settings.py
backend/db/mongo/: collections.py  repos.py
backend/db/qdrant/: __init__.py
backend/services/: llm.py
feeder/: .dockerignore  .env.sample  Dockerfile  airflow.cfg  dags_requirements.txt
feeder/dags/: web_ingester.py
feeder/dags/common/: settings.py
