[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.119.0",
    "langchain-community>=0.3.31",
    "langchain-google-genai>=2.1.12",
    "langchain-qdrant>=0.2.1",
    "langchain[google-genai]>=0.3.27",
    "langgraph>=0.6.10",
    "qdrant-client>=1.15.1",
]
